WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103782
IndexedDB: Propagate more leveldb errors to IDBIndex and IDBObjectStore
https://bugs.webkit.org/show_bug.cgi?id=103782
Summary
IndexedDB: Propagate more leveldb errors to IDBIndex and IDBObjectStore
David Grogan
Reported
2012-11-30 15:33:37 PST
IndexedDB: Propagate more leveldb errors to IDBIndex and IDBObjectStore
Attachments
Patch
(18.18 KB, patch)
2012-11-30 15:37 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(18.74 KB, patch)
2012-12-04 14:14 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(18.74 KB, patch)
2012-12-04 16:07 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch for landing
(18.79 KB, patch)
2012-12-04 16:31 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
David Grogan
Comment 1
2012-11-30 15:37:08 PST
Created
attachment 177037
[details]
Patch
David Grogan
Comment 2
2012-11-30 15:43:50 PST
Josh and Alec, could one of you take a look?
David Grogan
Comment 3
2012-11-30 15:48:23 PST
Comment on
attachment 177037
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=177037&action=review
> Source/WebCore/Modules/indexeddb/IDBBackingStore.cpp:670 > + InternalError(IDBLevelDBBackingStoreReadError0);
With the every-callsite patch in limbo I used 0, but if that patch lands I will add more entries to the InternalError enum.
David Grogan
Comment 4
2012-12-04 14:14:38 PST
Created
attachment 177559
[details]
Patch
David Grogan
Comment 5
2012-12-04 14:22:53 PST
Josh or Alec, could one of you take a look?
Alec Flett
Comment 6
2012-12-04 15:49:43 PST
Comment on
attachment 177559
[details]
Patch One nit, otherwise LGTM View in context:
https://bugs.webkit.org/attachment.cgi?id=177559&action=review
> Source/WebCore/Modules/indexeddb/IDBBackingStore.cpp:999 > + exists = decodeInt(data.begin(), data.end()) == version;
Add parentheses for readability
David Grogan
Comment 7
2012-12-04 16:07:53 PST
Created
attachment 177594
[details]
Patch
David Grogan
Comment 8
2012-12-04 16:08:35 PST
Tony, could you review this?
David Grogan
Comment 9
2012-12-04 16:08:52 PST
Comment on
attachment 177559
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=177559&action=review
>> Source/WebCore/Modules/indexeddb/IDBBackingStore.cpp:999 >> + exists = decodeInt(data.begin(), data.end()) == version; > > Add parentheses for readability
Done.
Tony Chang
Comment 10
2012-12-04 16:19:31 PST
Comment on
attachment 177594
[details]
Patch You may want to start adding WARN_UNUSED_RETURN to your functions to make sure people check the return value.
David Grogan
Comment 11
2012-12-04 16:31:24 PST
Created
attachment 177601
[details]
Patch for landing
David Grogan
Comment 12
2012-12-04 16:31:49 PST
(In reply to
comment #10
)
> (From update of
attachment 177594
[details]
) > You may want to start adding WARN_UNUSED_RETURN to your functions to make sure people check the return value.
Thanks, done.
David Grogan
Comment 13
2012-12-04 16:37:55 PST
Committed
r136592
: <
http://trac.webkit.org/changeset/136592
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug