Source/WebCore: IndexedDB: Propagate more leveldb errors to IDBIndex and IDBObjectStore https://bugs.webkit.org/show_bug.cgi?id=103782

Reviewed by Tony Chang.

index.get[Key]() and objectStore.get() will receive more error events.

* Modules/indexeddb/IDBBackingStore.cpp:
(WebCore::IDBBackingStore::getRecord):
(WebCore::versionExists):
(WebCore::IDBBackingStore::findKeyInIndex):
(WebCore::IDBBackingStore::getPrimaryKeyViaIndex):
(WebCore::IDBBackingStore::keyExistsInIndex):
* Modules/indexeddb/IDBBackingStore.h:
(IDBBackingStore):
* Modules/indexeddb/IDBIndexBackendImpl.cpp:
(WebCore::IDBIndexBackendImpl::getInternal):
(WebCore::IDBIndexBackendImpl::getKeyInternal):
* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::getInternal):
(WebCore):

Source/WebKit/chromium: Unreviewed.  Rolled DEPS.

Patch by Stephen White <senorblanco@chromium.org> on 2012-12-04

* DEPS:

Canonical link: https://commits.webkit.org/122174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136592 268f45cc-cd09-0410-ab3c-d52691b4dbfc